RESOLVED FIXED278052
REGRESSION (282158@main): [macOS] inspector/console/webcore-logging.html is a flaky failure
https://bugs.webkit.org/show_bug.cgi?id=278052
Summary REGRESSION (282158@main): [macOS] inspector/console/webcore-logging.html is a...
Marta Darbinyan
Reported 2024-08-13 14:55:29 PDT
The following test is flaky failure on macOS platforms starting from 282158@main. inspector/console/webcore-logging.html Diff error: @@ -29,7 +29,9 @@ -- Running test case: Console.Logging.MediaLogging PASS: Media logging disabled. PASS: Media logging has been enabled. -PASS: Media log message should have source 'media'. +FAIL: Media log message should have source 'media'. + Expected: truthy + Actual: false History: https://results.webkit.org/?suite=layout-tests&test=inspector%2Fconsole%2Fwebcore-logging.html Diff link: https://build.webkit.org/results/Apple-Sonoma-Release-AppleSilicon-WK1-Tests/282158@main%20(5391)/inspector/console/webcore-logging-pretty-diff.html
Attachments
Radar WebKit Bug Importer
Comment 1 2024-08-13 14:55:55 PDT
EWS
Comment 2 2024-08-13 15:26:18 PDT
Test gardening commit 282200@main (96293e70cf91): <https://commits.webkit.org/282200@main> Reviewed commits have been landed. Closing PR #32143 and removing active labels.
Jean-Yves Avenard [:jya]
Comment 3 2024-08-14 04:41:53 PDT
EWS
Comment 4 2024-09-06 07:17:32 PDT
Committed 283269@main (e7ba88dca5e7): <https://commits.webkit.org/283269@main> Reviewed commits have been landed. Closing PR #32192 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.