Cherry-pick 283269@main (e7ba88dca5e7). https://bugs.webkit.org/show_bug.cgi?id=278052

REGRESSION (282158@main): [macOS] inspector/console/webcore-logging.html is a flaky failure
    https://bugs.webkit.org/show_bug.cgi?id=278052
    rdar://133791485

    Reviewed by Eric Carlson.

    Don't add default `favicon.ico` to the list of icons to retrieve if the document is local.

    Don't attempt to use favicons that aren't served over HTTP. The DocumentLoader automatically adds
    a search for '/favicon.ico' of none were set in the Document.
    Attempting to load a non-existent icon caused unnecessary verbosity in the web inspector's console
    which caused the test to intermittently fail.

    Covered by existing tests and the re-enabled one.

    * LayoutTests/platform/mac/TestExpectations:
    * Source/WebCore/Modules/mediasession/MediaSession.cpp:
    (WebCore::fallbackArtwork):
    (WebCore::MediaSession::updateNowPlayingInfo):
    * Source/WebCore/Modules/mediasession/MediaSession.h:

    Canonical link: https://commits.webkit.org/283269@main

Canonical link: https://commits.webkit.org/282416.147@webkitglib/2.46